--- a/简洁简历/index.html
+++ b/简洁简历/index.html
@@ -55,7 +55,7 @@
               <div class="essential">
                <p>姓名：闫亚荣</p>
                <p>年龄：22</p>
-               <p>工作年限：5年</p>
+               <p>工作年限：1年</p>
               </div>
               <div>
                   <img class="lanbian" src="imgg/lanbian.png" alt="">
@@ -122,7 +122,7 @@
                   <img class="da" src="imgg/daohangdian.png" alt="">
                   <img class="da" src="imgg/daohangdian.png" alt="">
                   <div class="jl1">
-                      <span>郑州知君行科技有限公司</span>
+                      <span>公司名称</span>
                       <div class="text-m">
                           <img class="tiao" src="imgg/8be.png" alt="">
                           <p>1.负责网站门面设计；</p>
